Tue May 11 09:57:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (rb_vm_get_sourceline): add prototype.

Tue May 11 09:53:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/parser.c (PSYCH_TRANSCODE): get rid of bare use of gcc
	  extension.

Mon May 10 02:58:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_compile_each), vm_insnhelper.c (vm_invoke_block,
	  vm_throw): allow "return" and "yield" even in singleton class
	  definition.  based on a patch from wanabe <s.wanabe AT gmail.com>
	  for "return".  [ruby-core:21379] [ruby-dev:40975]

	* insns.def (defineclass): ditto (straightforwardly push block ptr,
	  instead of dfp ptr with special flag).

	* vm_core.h (RUBY_VM_CLASS_SPECIAL_P): ditto (no longer needed).

	* proc.c (proc_new): ditto (remove handling for special flag).

	* bootstraptest/test_jump.rb: add tests for above.

Sun May 16 14:41:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (dln_find.o): fix dependency.

Tue May 11 01:20:43 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): Return strings encoded as
	  Encoding.default_internal if set.

Mon May 10 06:59:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (rdoc): rdoc should depend main. Moreover when XRUBY
	  is miniruby, it can run after miniruby is built.

Mon May 10 03:36:56 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (eval_string_with_cref): propagative filename and line_no
	  of binding.  [ruby-dev:38767] [ruby-core:28307]

	* vm_core.h (rb_binding_t), proc.c: add filename and line_no fields to
	  preserve them.

Mon May 10 02:29:51 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c (fiber_switch): raise FiberError when returning to dead
	  fiber.  [ruby-dev:40833]

Sun May 16 11:39:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/missing.h (signbit): add missing prototype.

Sun May 16 10:49:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
